test/files_test/errors/define_number_as_symbol.scm
; Test: Invalid define - number as symbol - should return exit code 84
(define 42 "value")
